Added unit tests for api

--- a/src/CLP-Service.integrationtests/CLP-Service.integrationtests.csproj
+++ b/src/CLP-Service.integrationtests/CLP-Service.integrationtests.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CLP-Service\CLP-Service.csproj" />
+    <ProjectReference Include="..\Shared\Shared.Testing\Shared.Testing.csproj" />
   </ItemGroup>
 
 </Project>
